@@ -1,38 +1,54 @@
-# hass-momentary
+# **Momentary devices for Home Asistant**
+
+_Momentary_ is a component that provides momentary switches for _Home
+Assistant_. That is, it provides a simple switch that once turned on will
+turn itself off.
+
 ![icon](images/momentary-icon.png)
 
-### Momentary Switch Component for Home Assistant
-A simple switch component that once turned on will turn itself off.
+# !!!BREAKING CHANGES!!!
+Version 0.7 supports adding momentary devices using _config flow_. By default it
+will move your existing devices into a single file `momentary.yaml`. If you
+**DO NOT** want this behaviour add this to your `momentary` configuration.
 
-### NOTES!
-**This documentation is for the 0.7x version, you can find the
-0.6.x version** [here](https://github.com/twrecked/hass-momentary/blob/version-0.6.x/README.md).
+```yaml
+momentary:
+  yaml_config: True
+```
 
-This is a big update that moves the component over to the `config_flow`
-system. The update should be seamless but if you run into any problems:
+<!-- TOC -->
+* [**Momentary devices for Home Asistant**](#momentary-devices-for-home-asistant)
+* [!!!BREAKING CHANGES!!!](#breaking-changes)
+* [Introduction](#introduction)
+  * [Notes](#notes)
+  * [Version 0.6 Documentation](#version-06-documentation)
+  * [Thanks](#thanks)
+* [Installation](#installation)
+  * [HACS](#hacs)
+  * [Manually](#manually)
+  * [From Script](#from-script)
+* [Component Configuration](#component-configuration)
+* [Entity Configuration](#entity-configuration)
+  * [Options](#options)
+* [Upgrade Notes](#upgrade-notes)
+  * [After the Upgrade](#after-the-upgrade)
+  * [Names](#names)
+  * [`unique_id`](#unique_id)
+  * [Known Issues](#known-issues)
+* [Turning on Debug](#turning-on-debug)
+<!-- TOC -->
 
-- You can revert back to the previous version (0.6) and it will still work.
-- But if you can re-run the upgrade operation with debug enabled and create a
-  bug report I would greatly appreciate it.
-
-
-## Table Of Contents
-
-1. [Notes](#Notes)
-1. [Thanks](#Thanks)
-1. [Installation](#Installation)
-   1. [HACS](#HACS)
-   1. [Manually](#Manually)
-   1. [From Script](#From-Script)
-1. [Component Configuration](#Component-Configuration)
-2. [Upgrade Notes](#Upgrade-notes)
-
+# Introduction
 
 ## Notes
 
 Wherever you see `/config` in this README it refers to your home-assistant
 configuration directory. For me, for example, it's `/home/steve/ha` that is
 mapped to `/config` inside my docker container.
+
+## Version 0.6 Documentation
+**This documentation is for the 0.7x version, you can find the
+0.6.x version** [here](https://github.com/twrecked/hass-momentary/blob/version-0.6.x/README.md).
 
 
 ## Thanks
@@ -48,18 +64,18 @@ Many thanks to:
   and is licensed by CC BY 4.0
 
 
-## Installation
+# Installation
 
-### HACS
+## HACS
 [![hacs_badge](https://img.shields.io/badge/HACS-Default-orange.svg?style=for-the-badge)](https://github.com/hacs/integration)
 
 Momentary is part of the default HACS store. If you're not interested in
 development branches this is the easiest way to install.
 
-### Manually
+## Manually
 Copy the `momentary` directory into your `/config/custom_components` directory.
 
-### From Script
+## From Script
 Run the install script. Run it once to make sure the operations look sane and
 run it a second time with the `go` parameter to do the actual work. If you
 update just rerun the script, it will overwrite all installed files.
@@ -70,8 +86,19 @@ install /config
 install go /config
 ```
 
+# Component Configuration
 
-## Component Configuration
+- `yaml_config`; set to `True` to enable backwards compatability, set to `False`
+  to disable it. The default is `False`.
+
+For example, this enable backwards compatability.
+
+```yaml
+virtual:
+  yaml_config: True
+```
+
+# Entity Configuration
 Add the component using the standard _Home Assistant_  _Integration_ method.
 
 Because this component creates fake entries and because I'm still figuring out
@@ -147,7 +174,7 @@ reload.
 The integration supports multiple installs, you can use this group similar
 momentary devices together.
 
-### Options
+## Options
 
 The following additional parameters can be specified against the switches:
 
@@ -159,15 +186,15 @@ The following additional parameters can be specified against the switches:
 | cancellable             | Boolean    | False              | Allow switched to be untoggled manually.                                           |
 
 
-## Upgrade Notes
+# Upgrade Notes
 
-### After the Upgrade
+## After the Upgrade
 
 Check the devices and entities on the _Integrations_ page, if everything looks
 good then you can comment out the old configuration. _Don't delete it yet, this
 is alpha and I might change some settings..._
 
-### Names
+## Names
 
 The qualifier applied to the name has changed. The old qualify of `!` has been
 removed, not adding _momentary_ to the device/entity name is the default. A 
@@ -181,7 +208,7 @@ The upgrade code will change this for you.
 | Empty House Trigger  | +Empty House Trigger          | switch.momentary_empty_house_trigger |
 | !Empty House Trigger | Empty House Trigger           | switch.empty_house_trigger           |
 
-### `unique_id`
+## `unique_id`
 
 During an upgrade the original name based unique id will be created. For a new
 install a _UUID_ based unique id will be created.
@@ -199,7 +226,7 @@ new _UUID_ based unique ids.
 _I will look at how this can be made cleaner... maybe a config flow button 
 or as part of the upgrade._
 
-### Known Issues
+## Known Issues
 
 You will see errors like this on upgrade. They don't seem to cause an issue 
 and they disappear once you remove the legacy configuration.
@@ -208,7 +235,7 @@ and they disappear once you remove the legacy configuration.
 2023-10-13 17:28:09.154 ERROR (MainThread) [homeassistant.components.switch] The momentary platform for the switch integration does not support platform setup. Please remove it from your config.
 ```
 
-### Turning on Debug
+# Turning on Debug
 
 If you do run into issues you can enable debug with the following configration.
 
@@ -221,4 +248,3 @@ logger:
 
 If you can create a bug report with this debug output it would help me track 
 down the problem.
-
